updated plugin colour

--- a/documentation/.vuepress/styles/index.scss
+++ b/documentation/.vuepress/styles/index.scss
@@ -170,27 +170,27 @@
 
   /* PLUGIN */
   .plugin-filter-plugin .plugin-selector {
-    background: #2d2d2d;
+    background: #a200ff;
   }
 
   .plugin-type-plugin .plugin-header::before {
     content: "PLUGIN";
-    background: #2d2d2d;
+    background: #a200ff;
     color: white;
   }
 
   .plugin-type-plugin .author-name {
-    color: #2d2d2d;
+    color: #a200ff;
   }
 
   .plugin-type-plugin .action-button,
   .plugin-type-plugin .action-button-style {
-    background: #2d2d2d;
+    background: #a200ff;
     color: white;
   }
 
   .plugin-type-plugin {
-    border-color: #2d2d2d;
+    border-color: #a200ff;
     box-shadow: rgba(45, 45, 45, 0.2) 0px 4px 12px 0px;
   }
 
