.. dammit, forgot to update styling for market filter

--- a/documentation/.vuepress/styles/index.scss
+++ b/documentation/.vuepress/styles/index.scss
@@ -298,7 +298,7 @@
   }
 
   /* LOGGING */
-  .plugin-filter-log .plugin-selector {
+  .plugin-filter-logging .plugin-selector {
     background: #43A047;
   }
 
@@ -308,8 +308,8 @@
     color: white;
   }
 
-  .plugin-type-log .author-name,
-  .plugin-type-log .author-name svg {
+  .plugin-type-logging .author-name,
+  .plugin-type-logging .author-name svg {
     color: #43A047;
     fill: #43A047;
   }
